--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.22.0",
-    "@tanstack/react-query": "^5.80.7",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query-devtools": "^5.81.2",
     "mongodb": "^6.17.0",
     "next": "15.3.3",
+    "next-sanity": "^0.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
